--- a/src/css/maxwell.css
+++ b/src/css/maxwell.css
@@ -131,4 +131,5 @@ h2 {
 .mxcw-hidden.legend {
     opacity: 0;
     visibility: hidden;
+    display: none;
 }
